# sy

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  sy.toml
.agents/skills/bug/: SKILL.md
.agents/skills/debug-npu/: SKILL.md
.agents/skills/implement/: SKILL.md
.agents/skills/npu-prep/: SKILL.md
.agents/skills/workload/: SKILL.md
.claude/: settings.json
.claude/agents/: implementer.md
.claude/commands/: journey.md  qa-audit.md  research.md  roadmap.md
.claude/hooks/: post-edit-check.sh  stop-verify.sh
configs/foot/: foot.ini
configs/fuzzel/: fuzzel.ini
configs/mako/: config
configs/niri/: config.kdl
configs/swaylock/: config
configs/sy/: agents.toml
configs/systemd/system/: sy-knowledge.service
configs/telegram-desktop/: palette.tdesktop-palette
configs/waybar/: cheatsheet.jsonc  config.jsonc  style.css
configs/yazi/: theme.toml
scripts/: prep_npu_embed.py  prep_npu_workload.py  validate_npu_embed.py
specs/bugs/: BUG-20260513-2336.md
src/: auto.rs  auto_mcp.rs  bat.rs  bright.rs  bt.rs  cal.rs  disk.rs  fido.rs  gpu.rs  main.rs  net.rs  notif.rs  npu.rs  popup.rs  pwr.rs  silent.rs  sound.rs  vol.rs  wallpaper.rs  wifi.rs
src/agt/: acp.rs  client.rs  daemon.rs  inspector.rs  launcher.rs  menu.rs  mod.rs  permission.rs  proc_scan.rs  protocol.rs  registry.rs  session.rs  waybar.rs
src/aiplane/: cli.rs  ipc.rs  mod.rs  reexec.rs  registry.rs  session.rs  status.rs  worker_ipc.rs
src/aiplane/supervisor/: child.rs  health.rs  mod.rs
src/aiplane/worker/: mod.rs  runner.rs
src/aiplane/workloads/: embed.rs  fake.rs  mod.rs  ocr.rs  rerank.rs  stt.rs  vad.rs
src/disk/: strategies.rs
src/disk/strategies/: cargo_targets.rs  flatpak.rs  podman.rs  trash.rs  user_cache.rs
src/knowledge/: autoconfig.rs  chunk.rs  cli.rs  daemon.rs  embed.rs  extract.rs  ipc.rs  manifest.rs  mcp.rs  mod.rs  normalize.rs  qdrant.rs  runctx.rs  sources.rs  state.rs  status.rs
src/stack/: cli.rs  clip.rs  ipc.rs  mcp.rs  mod.rs  onto.rs  state.rs
src/stack/bar/: app.rs  mod.rs  theme.rs
themes/: black.toml  gruvbox-material.toml
